managed/apps/e2e/components/website/overlays/dev/patches/deploy-website-api.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: website-api
  namespace: e2e
spec:
  template:
    spec:
      containers:
        - name: api
          image: gcr.io/tf-ops-cicd-97aadd/e2e/website/dev/api:latest
