managed/apps/e2e/components/website/overlays/dev/patches/deploy-website-static.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: website-static
  namespace: e2e
spec:
  template:
    spec:
      containers:
        - name: static
          image: gcr.io/tf-ops-cicd-97aadd/e2e/website/dev/static:latest
