managed/apps/e2e/components/website/overlays/dev/patches/ingress-website.yaml
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: website
  namespace: e2e
spec:
  tls:
  - hosts:
    - dev.gifts.american-broomstick.com
    secretName: website-tls
  rules:
  - host: dev.gifts.american-broomstick.com
    http:
      paths: 
        - path: /
          pathType: Prefix
          backend:
            service:
              name: website-static-nginx
              port:
                number: 80
        - path: /api
          pathType: Prefix
          backend:
            service:
              name: website-api-nginx
              port:
                number: 8080
